<resources>
    <string name="app_name">Guild Administrator</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="label_ajuda">Ajuda</string>
    <string name="label_email_main_activity">E-mail</string>
    <string name="label_password_main_activity">Senha</string>
    <string name="label_login_main_activity">Login</string>
    <string name="label_forgot_password_main_activity">Esqueceu sua senha?</string>
    <string name="label_keep_connected_main_activity">Manter conectado.</string>
    <string name="label_button_register_main_activity">Não é cadastrado?</string>

    <string name="label_clique_aqui">Clique aqui.</string>

    <string name="home_app_bar_title">Home</string>
    <string name="login_app_bar_title">Login</string>
    <string name="transport_app_bar_title">Transporte</string>
    <string name="perfil_app_bar_title">Perfil</string>
    <string name="forgot_password_app_bar_title">Recuperação de Senha</string>

    <string name="menu_nav_drawer_label_home">Home</string>
    <string name="menu_nav_drawer_label_administration">Administração</string>
    <string name="menu_nav_drawer_label_utilits">Utilitários</string>
    <string name="menu_nav_drawer_label_customisations">Customizações</string>
    <string name="menu_nav_drawer_label_events">Eventos</string>
    <string name="menu_nav_drawer_label_notification">Notificações</string>

    <string name="menu_nav_drawer_label_title_profile">Perfil</string>
    <string name="menu_nav_drawer_label_title_transport">Transporte</string>
    <string name="menu_nav_drawer_label_title_call_to_arms">Call to Arms</string>
    <string name="menu_nav_drawer_label_title_rate_week">Taxa Semanal</string>
    <string name="menu_nav_drawer_label_title_rate_collect">Taxa de Coleta</string>
    <string name="menu_nav_drawer_label_title_regear">Regear</string>
    <string name="menu_nav_drawer_label_title_collect_calculator">Calcular Taxa de Coleta</string>
    <string name="menu_nav_drawer_label_title_request_regear">Requisitar Regear</string>

    <string name="title_dialog_send_code_forgot_password_verification">Digite o Código Recebido</string>
    <string name="label_code_dialog_send_code_forgot_password_verification">Código Recebido</string>
    <string name="label_verify_code_dialog_send_code_forgot_password_verification">Verificar</string>
    <string name="label_cancel_dialog_send_code_forgot_password_verification">Cancelar</string>
    <string name="label_send_code_dialog_send_code_forgot_password_verification">Enviar</string>

</resources>
